data/derived/fa15/progs/unify/prog2543.ml.out
Characters 132-146:
  else [x*i/10] @ [(x*i) mod 10]+mulByDigit i x';;
                  ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
